--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ProjectProg C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(ProjectProg main.c validation.c validation.h helpers.c helpers.h)
+add_executable(ProjectProg main.c validation.c validation.h helpers.c helpers.h sort.c sort.h employee.h)
